# SCPlayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scapplication.cpp  scapplication.h  scwindow.cpp  scwindow.h
